--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,25 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
+@layer base {
+  body {
+    @apply bg-slate-900;
+    /* @apply overflow-x-hidden;
+    @apply overflow-y-hidden; */
+  }
 }
-
-* {
-  box-sizing: border-box;
+@layer components {
+  .hoverAnimation {
+    @apply hover:bg-[#d9d9d9] hover:bg-opacity-10 rounded-full cursor-pointer w-[52px] h-[52px] xl:w-auto xl:h-auto xl:py-3 xl:px-4 transition duration-200 ease-out;
+  }
+  .icon {
+    @apply cursor-pointer w-9 h-9 hover:bg-[#1a9bf0] hover:bg-opacity-10 flex items-center justify-center rounded-t-full transition ease-out;
+  }
+  /* .bth {
+    @apply <a href="#_" class="relative inline-flex items-center justify-start inline-block px-5 py-3 overflow-hidden font-medium transition-all bg-blue-600 rounded-full hover:bg-white group">
+    <span class="absolute inset-0 border-0 group-hover:border-[25px] ease-linear duration-100 transition-all border-white rounded-full"></span>
+    <span class="relative w-full text-left text-white transition-colors duration-200 ease-in-out group-hover:text-blue-600">Sign In Google</span>
+</a>;
+  } */
 }
